--- a/package.json
+++ b/package.json
@@ -38,47 +38,45 @@
     "@babel/runtime": "^7.21.5",
     "@tarojs/components": "4.0.7",
     "@tarojs/helper": "4.0.7",
-    "@tarojs/plugin-platform-weapp": "4.0.7",
+    "@tarojs/plugin-framework-react": "4.0.7",
     "@tarojs/plugin-platform-alipay": "4.0.7",
-    "@tarojs/plugin-platform-tt": "4.0.7",
-    "@tarojs/plugin-platform-swan": "4.0.7",
+    "@tarojs/plugin-platform-h5": "4.0.7",
     "@tarojs/plugin-platform-jd": "4.0.7",
     "@tarojs/plugin-platform-qq": "4.0.7",
-    "@tarojs/plugin-platform-h5": "4.0.7",
+    "@tarojs/plugin-platform-swan": "4.0.7",
+    "@tarojs/plugin-platform-tt": "4.0.7",
+    "@tarojs/plugin-platform-weapp": "4.0.7",
+    "@tarojs/react": "4.0.7",
     "@tarojs/runtime": "4.0.7",
     "@tarojs/shared": "4.0.7",
     "@tarojs/taro": "4.0.7",
     "mobx": "^4.8.0",
     "mobx-react": "^6.1.4",
-    "@tarojs/plugin-framework-react": "4.0.7",
-    "@tarojs/react": "4.0.7",
-    "react-dom": "^18.0.0",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.24.1",
-    "@babel/plugin-proposal-class-properties": "7.14.5",
     "@babel/core": "^7.8.0",
+    "@babel/plugin-proposal-class-properties": "7.14.5",
+    "@babel/preset-react": "^7.24.1",
     "@tarojs/cli": "4.0.7",
     "@tarojs/vite-runner": "4.0.7",
+    "@types/react": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
+    "@vitejs/plugin-react": "^4.1.0",
     "babel-preset-taro": "4.0.7",
-    "eslint-config-taro": "4.0.7",
     "eslint": "^8.12.0",
+    "eslint-config-taro": "4.0.7",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "less": "^4.1.3",
+    "postcss": "^8.4.18",
+    "react-refresh": "^0.11.0",
     "stylelint": "^14.4.0",
     "terser": "^5.16.8",
-    "vite": "^4.2.0",
-    "@types/react": "^18.0.0",
-    "@vitejs/plugin-react": "^4.1.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "react-refresh": "^0.11.0",
-    "less": "^4.1.3",
-    "@typescript-eslint/parser": "^6.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
     "typescript": "^5.1.0",
-    "postcss": "^8.4.18"
+    "vite": "^4.2.0"
   }
 }
-
-
